# nixos-config

./: .envrc  .gitattributes  .gitignore  .gitmodules  .mcp.json  .sops.yaml  CLAUDE.md  Jenkinsfile  Makefile  README.md  activate.nix  config.nix  configuration.nix  flake-module.nix  flake.nix  home.nix  id_rsa.pub  justfile  lib.nix  secrets.json  secrets.yaml  shell.nix  sshkeys.nix  treefmt.toml  uday.nix  users.nix  vira.hs
.claude/: settings.json  settings.local.json
AI/: memory.md
claude-code/: README.md  memory.md  settings.nix
config/: polybar
containers/: hercules.nix
disko/: working.nix
docs/: GIT-SSH-REMOTE.md  LINUX-INTERNET-ISSUES.md  NAIVEINTENT-VS-PUREINTENT.md  POST-ACTIVATION-GROUPS.md  TAILSCALE-WIRED.md  eval-bench.sh  eval-time-ralph-report.md  pureintent-eval-ralph-report.md
doom.d/: config.el  init.el
features/: block-socialmedia.nix  devserver-mode.nix  distributed-build.nix  docker.nix  emacs.nix  gnome.nix  hercules.nix  kde.nix  lxd.nix  monitor-brightness.nix  nix-direnv.nix  passwordstore.nix  postgrest.nix  protonmail-bridge.nix  protonvpn.nix  server-mode.nix  syncthing.nix  virtualbox.nix  virtualization.nix
features/desktopish/taffybar/taffybar-srid/: Main.hs  default.nix  taffybar-srid.cabal
flake-parts/: default.nix  devshell.nix  nixos-flake.nix
home/: _1password.nix  bash.nix  default.nix  direnv.nix  emacs.nix  email.nix  flake.nix  git.nix  git_delta.nix  helix.nix  himalaya.nix  juspay.nix  just.nix  neovim.lua  neovim.nix  nix.nix  nushell.nix  powershell.nix  shellcommon.nix  smos.nix  ssh.nix  starship.nix  terminal.nix  tmux.nix  vscode-server.nix  zellij.nix  zsh.nix
hosts/: darwin.nix  facade.nix  nexus.nix  p71.nix  ryzen9.nix  thebeast.nix  thick.nix  thin.nix  wsl.nix  x1c7.nix
nix-darwin/: ci.nix  (+3 more)
nixos/gui/desktopish/taffybar/taffybar-srid/: taffybar-srid.cabal
nixos/gui/desktopish/xmonad/xmonad-srid/: CHANGELOG.md  Main.hs  README.md  xmonad-srid.cabal
(+445 files in other folders)
