cabal-version:      3.0
name:               taffybar-srid
version:            0.1.0.0
license:            BSD-3-Clause
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
extra-source-files: CHANGELOG.md

executable taffybar-srid
  main-is:          Main.hs
  build-depends:
    , base
    -- Use a version that fixes memory leak,
    -- https://github.com/taffybar/taffybar/blob/master/CHANGELOG.md
    , taffybar >= 3.2.2
    , xmonad
    , xmonad-contrib
    , xmobar
    , containers
    , text
    , time
    , dbus
    , gi-gtk
    , hslogger
    , mtl
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
