cabal-version:      3.0
name:               xmonad-srid
version:            0.1.0.0
license:            BSD-3-Clause
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
extra-source-files: CHANGELOG.md

executable xmonad-srid
  main-is:          Main.hs
  build-depends:
    , base
    , xmonad
    , xmonad-contrib
    , xmobar
    , containers
    , text
    , time
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
